...
              style={[
                styles.host,
                placement === 'top' ? styles.hostTop : styles.hostBottom,
              ]}
              pointerEvents="box-none"
            >
              <ToastView toast={currentToast} testID="toast-view" />
            </View>
          )
        : null}
    </ToastContext>
  );
}
...
